fixed agent button overflow and misalignment

--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,6 @@
 
 * { 
   margin: 0;
-  padding: 0;
   box-sizing: border-box;
   /* -ms-overflow-style: none;
   scrollbar-width: none; */
@@ -137,15 +136,22 @@ body{
 
 .button-row {
   display: flex;
+  justify-content: space-between;
   text-align: center;
-  height: 4.5rem;
-  white-space: nowrap;
-  width: 100%;
+  height: 75px;
+  padding-left: 5%;
+  padding-right: 5%;
 }
 
 .agent-button {
   width: 75px;
   height: 75px;
-  margin-left: .5rem;
-  margin-right: .5rem;
+  /* margin-left: 2.5rem;
+  margin-right: 2.5rem; */
+}
+
+.agent-in-list {
+  width: 75px;
+  height: 75px;
+  vertical-align: middle;
 }
